[package]
name = "treee"
version = "0.1"
edition = "2025"
description = "A fast tree command with regex"
readme = "README.md"
license = "HDSL"
keywords = ["tree", "directory", "gitignore", "cli", "filesystem"]
categories = ["command-line-utilities", "filesystem"]


[profile.dev]
debug = true



[[bin]]
name = "t"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
anyhow = "1.0"
atty = "0.2"
regex = "1.10"
winapi = "0.3.9"
chrono = "0.4.42"
io = "0.0.2"


[profile.release]
debug = false
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'    # Abort on panic
strip = true        # Strip symbols from binary*
